# Recall-me

./: .gitignore  AUDIT_REPORT.md  BUGS_OPEN.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEMO_MODE.md  FIRST_IMPRESSION_AUDIT.md  FIRST_USE_AUDIT.md  INSTALL_VERIFIED.md  LAUNCHER_USABILITY.md  PHASE_4A_STATUS.md  PRODUCT_RECOVERY.md  RC_VALIDATION.md  README.md  RECOVERY_CALIBRATION.md  RELEASE.md  RELEASE_READINESS.md  REPO_STRUCTURE.md  ROADMAP.md  ROOT_ARCHITECTURE.md  SCREEN_INDEX.md  SECURITY.md  STABILITY.md  V2_BRIEF.md  VERSION.md  VERSIONING.md  _smoke_api.py  _test_workblocks.py  recall-daemon.spec  recall.py  recall.spec  requirements.txt
.claude/: settings.local.json
.github/: ISSUE_LABELS.md  ISSUE_TRIAGE.md  pull_request_template.md
AUDIT/: ASSETS.md  ASSET_FREEZE.md  CAPTURE_MAP.md  DEAD_CODE.md  DEPENDENCY_DIFF.md  LAUNCHER_FREEZE.md  LAUNCHER_MAP.md  REPO_STABILIZATION.md  STATE.md  SURFACES.md
STABILITY/: CAPTURE.md  CONTROL.md  EXTENSION.md  LAUNCHER.md  PERF.md  RESUME.md
alpha/: ALPHA_001_RUNBOOK.md  ALPHA_FEEDBACK_V2.md  FEEDBACK.md  FIRST_72_HOURS.md  INSTALL.md  LIMITATIONS.md  README.md  SAMPLE_WORKFLOW.md  TRUST.md  alpha_report.md  recovery_journal.json  users_live.json
api/: __init__.py  logging_config.py  main.py  schemas.py
app/: __init__.py  cli.py  main.py  service.py
apps/launcher/src-tauri/: Cargo.toml  tauri.conf.json
apps/launcher/src-tauri/capabilities/: default.json
apps/launcher/src-tauri/icons/: icon.icns
apps/launcher/src-tauri/src/: lib.rs  main.rs
archive/: README.md
docs/: CODE_OF_CONDUCT.md  (+1 more)
(+681 files in other folders)
