[package]
name = "recall-launcher"
version = "0.1.0"
description = "Recall — continuity launcher"
authors = ["Kunal Kumar"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "recall_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
window-vibrancy = "0.7"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
